finnish custom aggregator notebook

--- a/demos/aggregator_extension.ipynb
+++ b/demos/aggregator_extension.ipynb
@@ -485,6 +485,10 @@
     "In the `validate_node` method, we store the config in a dictionary, where the key is the nodes name and the config is the `NodeThresholdConfig` object.\n",
     "\n",
     "In the constructor we also create a dictionary (`threshold_results`), where we will store the results of the threshold checks.\n",
+    "The most crucial function that we overwrite is `aggregate_node_result`. However, the first thing we do in here, is to call `super().aggregate_node_result(node)` that means we calculate the result aggregation of the node, with the sum aggregator. Afterward, if the node specifies any thresholds in its configs, we iterate and check those and assign the results to the `threshold_results` dictionary.\n",
+    "\n",
+    "Finally, the `result_extras`, we return the results for each node in the `threshold_results` dictionary.\n",
+    "\n",
     "\n"
    ],
    "id": "74c16a893bd7a278"
