adjusted sum aggregator demo making use of a 2nd scenario specific threshold aggregator.

--- a/demos/aggregator_extension.ipynb
+++ b/demos/aggregator_extension.ipynb
@@ -22,13 +22,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:55:49.161710Z",
-     "start_time": "2024-05-07T12:55:49.153529Z"
+     "end_time": "2024-05-13T09:04:21.187214Z",
+     "start_time": "2024-05-13T09:04:20.899773Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from pathlib import Path\n",
+    "\n",
+    "import pandas as pd\n",
     "\n",
     "module_path = Path() / \"data/threshold_aggregator.py\"\n",
     "module_path.exists()"
@@ -57,8 +59,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:55:52.854387Z",
-     "start_time": "2024-05-07T12:55:51.196466Z"
+     "end_time": "2024-05-13T09:04:25.959027Z",
+     "start_time": "2024-05-13T09:04:21.188390Z"
     }
    },
    "cell_type": "code",
@@ -123,7 +125,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-07 14:55:52,850 - demos.enbios.base - INFO - Running scenario 'scenario1'\n"
+      "2024-05-13 11:04:25,954 - demos.enbios.base - INFO - Running scenario 'scenario1'\n"
      ]
     },
     {
@@ -157,8 +159,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:55:55.725207Z",
-     "start_time": "2024-05-07T12:55:55.704390Z"
+     "end_time": "2024-05-13T09:04:25.973566Z",
+     "start_time": "2024-05-13T09:04:25.960200Z"
     }
    },
    "cell_type": "code",
@@ -179,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-07 14:55:55,720 - demos.enbios.base - INFO - Running scenario 'scenario1'\n"
+      "2024-05-13 11:04:25,969 - demos.enbios.base - INFO - Running scenario 'scenario1'\n"
      ]
     },
     {
@@ -213,8 +215,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:56:17.401809Z",
-     "start_time": "2024-05-07T12:56:17.381833Z"
+     "end_time": "2024-05-13T09:04:25.985594Z",
+     "start_time": "2024-05-13T09:04:25.975255Z"
     }
    },
    "cell_type": "code",
@@ -223,7 +225,7 @@
     "exp_config[\"hierarchy\"][\"config\"] = {\n",
     "    \"method_thresholds\": [{\n",
     "        \"method\": \"co2\",\n",
-    "        \"threshold\": 200\n",
+    "        \"threshold\": 300\n",
     "    }]\n",
     "}\n",
     "\n",
@@ -237,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-05-07 14:56:17,396 - demos.enbios.base - INFO - Running scenario 'scenario1'\n"
+      "2024-05-13 11:04:25,981 - demos.enbios.base - INFO - Running scenario 'scenario1'\n"
      ]
     },
     {
@@ -247,7 +249,7 @@
        "  'results': {'co2': {'unit': 'kg', 'magnitude': 200.0}},\n",
        "  'output': [{'unit': 'kilogram', 'magnitude': 100.0, 'label': None},\n",
        "   {'unit': 'liter', 'magnitude': 100.0, 'label': None}],\n",
-       "  'threshold_results': {'co2': True},\n",
+       "  'threshold_results': {'co2': False},\n",
        "  'children': [{'name': 'n1',\n",
        "    'results': {'co2': {'unit': 'kg', 'magnitude': 100.0}},\n",
        "    'output': [{'unit': 'kg', 'magnitude': 100.0, 'label': None}]},\n",
@@ -256,18 +258,18 @@
        "    'output': [{'unit': 'l', 'magnitude': 100.0, 'label': None}]}]}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T12:56:32.961141Z",
-     "start_time": "2024-05-07T12:56:32.957684Z"
+     "end_time": "2024-05-13T09:04:25.990683Z",
+     "start_time": "2024-05-13T09:04:25.986895Z"
     }
    },
    "cell_type": "code",
@@ -277,27 +279,26 @@
     {
      "data": {
       "text/plain": [
-       "{'co2': True}"
+       "{'co2': False}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-07T11:22:01.994059Z",
-     "start_time": "2024-05-07T11:22:01.982934Z"
+     "end_time": "2024-05-13T09:04:26.011604Z",
+     "start_time": "2024-05-13T09:04:25.991751Z"
     }
    },
    "cell_type": "code",
    "source": [
     "exp.results_to_csv(\"temp.csv\", flat_hierarchy=True)\n",
-    "import pandas as pd\n",
     "\n",
     "pd.read_csv(\"temp.csv\").fillna(\"\")"
    ],
@@ -317,7 +318,7 @@
        "2             l               100.0                                \n",
        "\n",
        "  output_1_magnitude output_1_label threshold_results_co2  \n",
-       "0              100.0                                 True  \n",
+       "0              100.0                                False  \n",
        "1                                                          \n",
        "2                                                          "
       ],
@@ -368,7 +369,7 @@
        "      <td>liter</td>\n",
        "      <td>100.0</td>\n",
        "      <td></td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -405,18 +406,21 @@
        "</div>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 7
+   "execution_count": 6
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T09:04:26.020428Z",
+     "start_time": "2024-05-13T09:04:26.012517Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "#this is the whole module content:\n",
     "\n",
@@ -455,9 +459,10 @@
     "        return \"threshold\"\n",
     "\n",
     "    def aggregate_node_result(\n",
-    "            self, node: BasicTreeNode[ScenarioResultNodeData]\n",
+    "            self, node: BasicTreeNode[ScenarioResultNodeData],\n",
+    "            scenario_name: str\n",
     "    ) -> dict[str, ResultValue]:\n",
-    "        sum_ = super().aggregate_node_result(node)\n",
+    "        sum_ = super().aggregate_node_result(node, scenario_name)\n",
     "        if node.name in self.node_thresholds:\n",
     "            node_thresholds = self.node_thresholds[node.name]\n",
     "            self.threshold_results[node.name] = {}\n",
@@ -467,14 +472,16 @@
     "                    self.threshold_results[node.name][method] = sum_[method].magnitude >= method_threshold.threshold\n",
     "        return sum_\n",
     "\n",
-    "    def result_extras(self, node_name: str) -> dict[str, Any]:\n",
+    "    def result_extras(self, node_name: str, scenario_name: str) -> dict[str, Any]:\n",
     "        results = self.threshold_results.get(node_name, {})\n",
     "        if results:\n",
     "            return {\"threshold_results\": results}\n",
     "        else:\n",
     "            return {}\n"
    ],
-   "id": "703f28d7cf71e479"
+   "id": "703f28d7cf71e479",
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -492,6 +499,335 @@
     "\n"
    ],
    "id": "74c16a893bd7a278"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T09:04:26.029346Z",
+     "start_time": "2024-05-13T09:04:26.021518Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "exp_config[\"scenarios\"].append({\n",
+    "    \"name\": \"scenario2\",\n",
+    "    \"nodes\": {\n",
+    "        \"n1\": {\n",
+    "            \"outputs\": [{\"magnitude\": 190}],\n",
+    "            \"impacts\": {\n",
+    "                \"co2\": {\"unit\": \"kg\", \"magnitude\": 200}\n",
+    "            }\n",
+    "        },\n",
+    "        \"n2\": {\n",
+    "            \"outputs\": [{\"magnitude\": 300}],\n",
+    "            \"impacts\": {\n",
+    "                \"co2\": {\"unit\": \"kg\", \"magnitude\": 500}\n",
+    "            }\n",
+    "        }\n",
+    "    }\n",
+    "})"
+   ],
+   "id": "9aebd3bec28988ab",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T09:04:26.052527Z",
+     "start_time": "2024-05-13T09:04:26.030843Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# running the epxperiment again with the second scenario included, we see that in the case of the second scenario, the threshold is surpassed and the threshold value is marked True .\n",
+    "exp = Experiment(exp_config)\n",
+    "exp.run()\n",
+    "\n",
+    "exp.results_to_csv(\"temp.csv\", flat_hierarchy=True,include_output=False, include_method_units=False)\n",
+    "\n",
+    "pd.read_csv(\"temp.csv\").fillna(\"\")"
+   ],
+   "id": "ea87734f912f51ca",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-13 11:04:26,042 - demos.enbios.base - INFO - Running scenario 'scenario1'\n",
+      "2024-05-13 11:04:26,043 - demos.enbios.base - INFO - Running scenario 'scenario2'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "    scenario node_name  level parent_name  results_co2_magnitude  \\\n",
+       "0  scenario1      root      0                              200.0   \n",
+       "1  scenario1        n1      1        root                  100.0   \n",
+       "2  scenario1        n2      1        root                  100.0   \n",
+       "3  scenario2      root      0                              700.0   \n",
+       "4  scenario2        n1      1        root                  200.0   \n",
+       "5  scenario2        n2      1        root                  500.0   \n",
+       "\n",
+       "  threshold_results_co2  \n",
+       "0                 False  \n",
+       "1                        \n",
+       "2                        \n",
+       "3                  True  \n",
+       "4                        \n",
+       "5                        "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>scenario</th>\n",
+       "      <th>node_name</th>\n",
+       "      <th>level</th>\n",
+       "      <th>parent_name</th>\n",
+       "      <th>results_co2_magnitude</th>\n",
+       "      <th>threshold_results_co2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>scenario1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>scenario1</td>\n",
+       "      <td>n1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>scenario1</td>\n",
+       "      <td>n2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>scenario2</td>\n",
+       "      <td>root</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>700.0</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>scenario2</td>\n",
+       "      <td>n1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>scenario2</td>\n",
+       "      <td>n2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 9
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Following we make some adjustments to our experiment. We use a modified version of the threshold-aggregotor. We extend it, in such a way, that the threshold can be specified for each scenario. A scenario config for a node using the scenario-sum-threshold aggregator can pass the same threshold config as in the hierarchy. The config in the hierarchy will be used as a default, but if specified in a scenario config, a node will use those configs. We can now pass a new config for the root node for `scenario2`, where we specify a higher threshold for co2.",
+   "id": "70de1093d815435f"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-13T09:15:46.655017Z",
+     "start_time": "2024-05-13T09:15:46.556898Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "exp_config[\"aggregators\"][0] = {\n",
+    "    \"aggregator_name\": \"scenario-sum-threshold\",\n",
+    "    \"module_path\": Path() / \"data/threshold_aggregator_scenarios.py\"\n",
+    "}\n",
+    "\n",
+    "exp_config[\"hierarchy\"][\"aggregator\"] = \"scenario-threshold\"\n",
+    "\n",
+    "exp_config[\"scenarios\"][1][\"nodes\"][\"root\"] = {\n",
+    "    \"method_thresholds\": [{\n",
+    "        \"method\": \"co2\",\n",
+    "        \"threshold\": 1000\n",
+    "    }]\n",
+    "}\n",
+    "\n",
+    "exp = Experiment(exp_config)\n",
+    "exp.run()\n",
+    "\n",
+    "exp.results_to_csv(\"temp.csv\", flat_hierarchy=True, include_output=False, include_method_units=False)\n",
+    "pd.read_csv(\"temp.csv\").fillna(\"\")"
+   ],
+   "id": "20e917a75d19160c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-13 11:15:46,598 - demos.enbios.base - INFO - Running scenario 'scenario1'\n",
+      "2024-05-13 11:15:46,605 - demos.enbios.base - INFO - Running scenario 'scenario2'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "    scenario node_name  level parent_name  results_co2_magnitude  \\\n",
+       "0  scenario1      root      0                              200.0   \n",
+       "1  scenario1        n1      1        root                  100.0   \n",
+       "2  scenario1        n2      1        root                  100.0   \n",
+       "3  scenario2      root      0                              700.0   \n",
+       "4  scenario2        n1      1        root                  200.0   \n",
+       "5  scenario2        n2      1        root                  500.0   \n",
+       "\n",
+       "  threshold_results_co2  \n",
+       "0                 False  \n",
+       "1                        \n",
+       "2                        \n",
+       "3                 False  \n",
+       "4                        \n",
+       "5                        "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>scenario</th>\n",
+       "      <th>node_name</th>\n",
+       "      <th>level</th>\n",
+       "      <th>parent_name</th>\n",
+       "      <th>results_co2_magnitude</th>\n",
+       "      <th>threshold_results_co2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>scenario1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>scenario1</td>\n",
+       "      <td>n1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>scenario1</td>\n",
+       "      <td>n2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>scenario2</td>\n",
+       "      <td>root</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>700.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>scenario2</td>\n",
+       "      <td>n1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>scenario2</td>\n",
+       "      <td>n2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>root</td>\n",
+       "      <td>500.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 13
   }
  ],
  "metadata": {
