--- a/demos/aggregator_extension.ipynb
+++ b/demos/aggregator_extension.ipynb
@@ -68,33 +68,14 @@
     "from enbios import Experiment\n",
     "\n",
     "exp_config = {\n",
-    "    \"adapters\": [\n",
-    "        {\n",
-    "            \"adapter_name\": \"assignment-adapter\",\n",
-    "            \"methods\": {\n",
-    "                \"co2\": \"kg\"\n",
-    "            }\n",
-    "        }\n",
-    "    ],\n",
+    "    \"adapters\": [{\"adapter_name\": \"assignment-adapter\", \"methods\": {\"co2\": \"kg\"}}],\n",
     "    \"hierarchy\": {\n",
     "        \"name\": \"root\",\n",
     "        \"aggregator\": \"sum\",\n",
     "        \"children\": [\n",
-    "            {\n",
-    "                \"name\": \"n1\",\n",
-    "                \"adapter\": \"assign\",\n",
-    "                \"config\": {\n",
-    "                    \"outputs\": [{\"unit\": \"kg\"}]\n",
-    "                }\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"n2\",\n",
-    "                \"adapter\": \"assign\",\n",
-    "                \"config\": {\n",
-    "                    \"outputs\": [{\"unit\": \"l\"}]\n",
-    "                }\n",
-    "            }\n",
-    "        ]\n",
+    "            {\"name\": \"n1\", \"adapter\": \"assign\", \"config\": {\"outputs\": [{\"unit\": \"kg\"}]}},\n",
+    "            {\"name\": \"n2\", \"adapter\": \"assign\", \"config\": {\"outputs\": [{\"unit\": \"l\"}]}},\n",
+    "        ],\n",
     "    },\n",
     "    \"scenarios\": [\n",
     "        {\n",
@@ -102,19 +83,15 @@
     "            \"nodes\": {\n",
     "                \"n1\": {\n",
     "                    \"outputs\": [{\"magnitude\": 100}],\n",
-    "                    \"impacts\": {\n",
-    "                        \"co2\": {\"unit\": \"kg\", \"magnitude\": 100}\n",
-    "                    }\n",
+    "                    \"impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 100}},\n",
     "                },\n",
     "                \"n2\": {\n",
     "                    \"outputs\": [{\"magnitude\": 100}],\n",
-    "                    \"impacts\": {\n",
-    "                        \"co2\": {\"unit\": \"kg\", \"magnitude\": 100}\n",
-    "                    }\n",
-    "                }\n",
-    "            }\n",
+    "                    \"impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 100}},\n",
+    "                },\n",
+    "            },\n",
     "        }\n",
-    "    ]\n",
+    "    ],\n",
     "}\n",
     "\n",
     "Experiment(exp_config).run()"
@@ -167,10 +144,9 @@
    "source": [
     "path_string = module_path.as_posix()\n",
     "\n",
-    "exp_config[\"aggregators\"] = [{\n",
-    "    \"aggregator_name\": \"sum-threshold\",\n",
-    "    \"module_path\": path_string\n",
-    "}]\n",
+    "exp_config[\"aggregators\"] = [\n",
+    "    {\"aggregator_name\": \"sum-threshold\", \"module_path\": path_string}\n",
+    "]\n",
     "\n",
     "exp = Experiment(exp_config)\n",
     "exp.run()"
@@ -223,10 +199,7 @@
    "source": [
     "exp_config[\"hierarchy\"][\"aggregator\"] = \"threshold\"\n",
     "exp_config[\"hierarchy\"][\"config\"] = {\n",
-    "    \"method_thresholds\": [{\n",
-    "        \"method\": \"co2\",\n",
-    "        \"threshold\": 300\n",
-    "    }]\n",
+    "    \"method_thresholds\": [{\"method\": \"co2\", \"threshold\": 300}]\n",
     "}\n",
     "\n",
     "exp = Experiment(exp_config)\n",
@@ -422,7 +395,7 @@
    },
    "cell_type": "code",
    "source": [
-    "#this is the whole module content:\n",
+    "# this is the whole module content:\n",
     "\n",
     "from typing import Any\n",
     "\n",
@@ -442,7 +415,6 @@
     "\n",
     "\n",
     "class ThresholdAggregator(SumAggregator):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
     "        self.node_thresholds: dict[str, NodeThresholdConfig] = {}\n",
@@ -450,7 +422,9 @@
     "\n",
     "    def validate_node(self, node_name: str, node_config: Any):\n",
     "        if node_config:\n",
-    "            self.node_thresholds[node_name] = NodeThresholdConfig.model_validate(node_config)\n",
+    "            self.node_thresholds[node_name] = NodeThresholdConfig.model_validate(\n",
+    "                node_config\n",
+    "            )\n",
     "\n",
     "    def name(self) -> str:\n",
     "        return \"sum-threshold-aggregator\"\n",
@@ -459,8 +433,7 @@
     "        return \"threshold\"\n",
     "\n",
     "    def aggregate_node_result(\n",
-    "            self, node: BasicTreeNode[ScenarioResultNodeData],\n",
-    "            scenario_name: str\n",
+    "        self, node: BasicTreeNode[ScenarioResultNodeData], scenario_name: str\n",
     "    ) -> dict[str, ResultValue]:\n",
     "        sum_ = super().aggregate_node_result(node, scenario_name)\n",
     "        if node.name in self.node_thresholds:\n",
@@ -469,7 +442,9 @@
     "            for method_threshold in node_thresholds.method_thresholds:\n",
     "                if method_threshold.method in sum_:\n",
     "                    method = method_threshold.method\n",
-    "                    self.threshold_results[node.name][method] = sum_[method].magnitude >= method_threshold.threshold\n",
+    "                    self.threshold_results[node.name][method] = (\n",
+    "                        sum_[method].magnitude >= method_threshold.threshold\n",
+    "                    )\n",
     "        return sum_\n",
     "\n",
     "    def result_extras(self, node_name: str, scenario_name: str) -> dict[str, Any]:\n",
@@ -477,7 +452,7 @@
     "        if results:\n",
     "            return {\"threshold_results\": results}\n",
     "        else:\n",
-    "            return {}\n"
+    "            return {}"
    ],
    "id": "703f28d7cf71e479",
    "outputs": [],
@@ -509,23 +484,21 @@
    },
    "cell_type": "code",
    "source": [
-    "exp_config[\"scenarios\"].append({\n",
-    "    \"name\": \"scenario2\",\n",
-    "    \"nodes\": {\n",
-    "        \"n1\": {\n",
-    "            \"outputs\": [{\"magnitude\": 190}],\n",
-    "            \"impacts\": {\n",
-    "                \"co2\": {\"unit\": \"kg\", \"magnitude\": 200}\n",
-    "            }\n",
+    "exp_config[\"scenarios\"].append(\n",
+    "    {\n",
+    "        \"name\": \"scenario2\",\n",
+    "        \"nodes\": {\n",
+    "            \"n1\": {\n",
+    "                \"outputs\": [{\"magnitude\": 190}],\n",
+    "                \"impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 200}},\n",
+    "            },\n",
+    "            \"n2\": {\n",
+    "                \"outputs\": [{\"magnitude\": 300}],\n",
+    "                \"impacts\": {\"co2\": {\"unit\": \"kg\", \"magnitude\": 500}},\n",
+    "            },\n",
     "        },\n",
-    "        \"n2\": {\n",
-    "            \"outputs\": [{\"magnitude\": 300}],\n",
-    "            \"impacts\": {\n",
-    "                \"co2\": {\"unit\": \"kg\", \"magnitude\": 500}\n",
-    "            }\n",
-    "        }\n",
     "    }\n",
-    "})"
+    ")"
    ],
    "id": "9aebd3bec28988ab",
    "outputs": [],
@@ -544,7 +517,9 @@
     "exp = Experiment(exp_config)\n",
     "exp.run()\n",
     "\n",
-    "exp.results_to_csv(\"temp.csv\", flat_hierarchy=True,include_output=False, include_method_units=False)\n",
+    "exp.results_to_csv(\n",
+    "    \"temp.csv\", flat_hierarchy=True, include_output=False, include_method_units=False\n",
+    ")\n",
     "\n",
     "pd.read_csv(\"temp.csv\").fillna(\"\")"
    ],
@@ -688,22 +663,21 @@
    "source": [
     "exp_config[\"aggregators\"][0] = {\n",
     "    \"aggregator_name\": \"scenario-sum-threshold\",\n",
-    "    \"module_path\": Path() / \"data/threshold_aggregator_scenarios.py\"\n",
+    "    \"module_path\": Path() / \"data/threshold_aggregator_scenarios.py\",\n",
     "}\n",
     "\n",
     "exp_config[\"hierarchy\"][\"aggregator\"] = \"scenario-threshold\"\n",
     "\n",
     "exp_config[\"scenarios\"][1][\"nodes\"][\"root\"] = {\n",
-    "    \"method_thresholds\": [{\n",
-    "        \"method\": \"co2\",\n",
-    "        \"threshold\": 1000\n",
-    "    }]\n",
+    "    \"method_thresholds\": [{\"method\": \"co2\", \"threshold\": 1000}]\n",
     "}\n",
     "\n",
     "exp = Experiment(exp_config)\n",
     "exp.run()\n",
     "\n",
-    "exp.results_to_csv(\"temp.csv\", flat_hierarchy=True, include_output=False, include_method_units=False)\n",
+    "exp.results_to_csv(\n",
+    "    \"temp.csv\", flat_hierarchy=True, include_output=False, include_method_units=False\n",
+    ")\n",
     "pd.read_csv(\"temp.csv\").fillna(\"\")"
    ],
    "id": "20e917a75d19160c",
